--- a/index.html
+++ b/index.html
@@ -33,13 +33,7 @@
 <body>
     <script src="app.js" type="text/javascript"></script>
     <!--IMAGETARGETS-->
-		<imagetarget id='bfly' src='targets/bfly.png'></imagetarget>
-		<imagetarget id='flower' src='targets/flower.png'></imagetarget>
-		<imagetarget id='bloom' src='targets/bloom.png'></imagetarget>
-		<imagetarget id='lady' src='targets/lady.png'></imagetarget>
-		<imagetarget id='reel' src='targets/reel.png'></imagetarget>
-		<imagetarget id='rmn' src='targets/rmn.png'></imagetarget>
-		<imagetarget id='original' src='targets/soto.png'></imagetarget>
+		<imagetarget id='sotofish' src='targets/sotofish.png'></imagetarget>
 
     <div id="startWebcamDiv" class="ctaDiv">
         <p style="text-align: center; width:60vw">This augmented reality experience requires access to your device's camera</p>
