--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             right: 0;
             top: 0;
             bottom: 0;
-            background: #fffa;
+            background: rgba(0, 0, 0, 0.667);
         }
     </style>
 </head>
