--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <title>Unity WebGL Player | SotofishAR</title>
     <style>
         body {
