--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
             bottom: 0;
             background: rgb(0, 0, 0);
         }
+	button {
+	    background-color: lightgrey;
+	    color: grey;
+	    border: 1px solid darkgrey;
+	    border-radius: 8px;
+	    padding: 8px 16px;
+	    font-size: 16px;
+	    text-align: center;
+	    cursor: pointer;
+	}
     </style>
 </head>
 <body>
