--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             top: 50%;
             left: 50%;
             overflow: hidden;
+		background: rgb(0, 0, 0);
         }
         .ctaDiv {
             display: flex;
