--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>Unity WebGL Player | SotofishAR</title>
+    <link rel="stylesheet" href="TemplateData/style.css">
     <style>
         body {
             margin: 0;
@@ -16,7 +16,7 @@
             top: 50%;
             left: 50%;
             overflow: hidden;
-		background: rgb(0, 0, 0);
+            background: rgb(0, 0, 0);
         }
         .ctaDiv {
             display: flex;
@@ -28,35 +28,47 @@
             right: 0;
             top: 0;
             bottom: 0;
-            background: rgb(0, 0, 0);
+            background: rgba(0, 0, 0, 0.582);
         }
-	button {
-	    background-color: lightgrey;
-	    color: grey;
-	    border: 1px solid darkgrey;
-	    border-radius: 8px;
-	    padding: 8px 16px;
-	    font-size: 16px;
-	    text-align: center;
-	    cursor: pointer;
-	}
+        button {
+            background-color: lightgrey;
+            color: grey;
+            border: 1px solid darkgrey;
+            border-radius: 8px;
+            padding: 8px 16px;
+            font-size: 16px;
+            text-align: center;
+            cursor: pointer;
+	    }
     </style>
 </head>
 <body>
     <script src="app.js" type="text/javascript"></script>
     <!--IMAGETARGETS-->
-		<imagetarget id='sotofish' src='targets/sotofish.png'></imagetarget>
+		<imagetarget id='sotofishbfly' src='targets/sotofish.png'></imagetarget>
 
     <div id="startWebcamDiv" class="ctaDiv">
-        <p style="text-align: center; width:60vw">This augmented reality experience requires access to your device's camera</p>
-        <button onclick="StartCamera()">ALLOW ACCESS</button>
+        <p style="text-align: center; width:60vw; color: rgb(150, 150, 150);">This augmented reality experience requires access to your device's camera</p>
+        <button id="startCameraBtn" onclick="StartCamera()" style="display:none">Enable Camera</button>
     </div>
     <div id="startWebcamManuallyDiv" style="display: none" class="ctaDiv">
         <button onclick="StartCameraManually()" style="width:180px; height:40px; border:1px solid gray; border-radius:8px">START WEBCAM</button>
     </div>
     <canvas id="unity-canvas" style="width: 100%; height: 100%; background: #0000; /*position:absolute;*/ z-index: -99"></canvas>
+    <div id="unity-container" class="unity-desktop">
+        <div id="unity-loading-bar">
+            <div id="unity-logo"></div>
+            <div id="unity-progress-bar-empty">
+                <div id="unity-progress-bar-full"></div>
+            </div>
+        </div>
+    </div>
     <script src="Build/SotofishWebGL.loader.js"></script>
     <script>
+            var container = document.querySelector("#unity-container");
+            var canvas = document.querySelector("#unity-canvas");
+            var loadingBar = document.querySelector("#unity-loading-bar");
+            var progressBarFull = document.querySelector("#unity-progress-bar-full");
             if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
                 // Mobile device style: fill the whole browser client area with the game canvas:
                 var meta = document.createElement('meta');
@@ -77,27 +89,33 @@
                     //webglContextAttributes: { "preserveDrawingBuffer": true },
                     // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
                     // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
-                }).then((unityInstance) => {
+                    },
+                    (progress) => {
+                        progressBarFull.style.width = 100 * progress + "%";
+                    }
+                ).then((unityInstance) => {
                     window.gameInstance = unityInstance;
                     window.unityInstance = unityInstance;
-                    window.tracker.startWebcam();
+                    window.iTracker.startWebcam();
                     //fix: some browsers (such as Wechat) does not allow webcam autoplay so we need to start the webcam manually via new button press
                     window.waitForVideo = () => {
                         setTimeout(() => {
-                            if (!window.tracker.VIDEO) {
+                            if (!window.iTracker.VIDEO) {
                                 window.waitForVideo();
                             }
-                            else if (window.tracker.VIDEO.currentTime <= 0) {
+                            else if (window.iTracker.VIDEO.currentTime <= 0) {
                                 document.getElementById("startWebcamManuallyDiv").style.display = "flex";
                             }
                         }, 2500)
                     };
                     window.waitForVideo();
+                    loadingBar.style.display = "none";
                 });
+                loadingBar.style.display = "block";
             }
             function StartCameraManually() {
                 document.getElementById("startWebcamManuallyDiv").style.display = "none";
-                tracker.VIDEO.play()
+                iTracker.VIDEO.play()
             }
     </script>
 </body>
