--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
     <script src="app.js" type="text/javascript"></script>
     <!--IMAGETARGETS-->
-		<imagetarget id='sotofish' src='targets/sotofish.png'></imagetarget>
+		<imagetarget id='sotofish' src='https://storage.googleapis.com/argon-web/images.jpg'></imagetarget>
 
     <div id="startWebcamDiv" class="ctaDiv">
         <p style="text-align: center; width:60vw; color: rgb(150, 150, 150);">This augmented reality experience requires access to your device's camera</p>
